// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`WelcomeScreen - Snapshot Tests > matches snapshot for standard user 1`] = `
<div>
  <main
    aria-label="Onboarding Welcome"
    class="min-h-screen flex items-center justify-center p-4 sm:p-6 md:p-8"
    role="main"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 pointer-events-none overflow-hidden"
    >
      <div
        class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[800px] h-[800px] rounded-full border border-[var(--orion-cyan)]/10"
      />
      <div
        class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[1000px] h-[1000px] rounded-full border border-[var(--orion-cyan)]/5 rotate-45"
      />
      <div
        class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[1200px] h-[1200px] rounded-full border border-[var(--orion-violet)]/5 -rotate-12"
      />
      <div
        class="absolute top-1/4 left-1/4 w-64 h-64 bg-[var(--orion-cyan)]/10 rounded-full blur-3xl animate-pulse"
      />
      <div
        class="absolute bottom-1/4 right-1/4 w-96 h-96 bg-[var(--orion-violet)]/10 rounded-full blur-3xl animate-pulse"
        style="animation-delay: 1s;"
      />
      <div
        class="absolute bottom-0 left-0 right-0 h-64 bg-gradient-to-t from-[var(--orion-cyan)]/5 via-transparent to-transparent"
      />
    </div>
    <div
      class="relative w-full max-w-5xl mx-auto flex flex-col lg:flex-row gap-6 lg:gap-0 animate-slide-up"
      style="display: flex; flex-direction: row; gap: 0; max-width: 64rem; margin: 0px auto; width: 100%; position: relative;"
    >
      <aside
        class="lg:w-64 flex-shrink-0 flex flex-col items-center lg:items-start text-center lg:text-left lg:pr-8 lg:border-r lg:border-[var(--orion-border)]/30"
        style="width: 16rem; flex-shrink: 0; display: flex; flex-direction: column; align-items: flex-start; text-align: left; padding-right: 2rem; border-right: 1px solid rgba(148, 163, 184, 0.1);"
      >
        <div
          class="relative group"
        >
          <div
            class="absolute -inset-1 rounded-2xl bg-gradient-to-br from-[var(--orion-cyan)] to-[var(--orion-violet)] opacity-50 blur-sm group-hover:opacity-70 transition-opacity"
          />
          <img
            alt="User avatar"
            class="relative w-16 h-16 rounded-2xl object-cover border-2 border-[var(--orion-cyan)]/30"
            src="https://example.com/avatar.jpg"
          />
        </div>
        <h2
          class="mt-4 text-lg font-semibold text-[var(--orion-text-primary)] font-display"
        >
          John
        </h2>
        <div
          class="flex items-center gap-2 mt-1"
        >
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-emerald)] animate-pulse"
          />
          <span
            class="text-xs text-[var(--orion-text-muted)] font-mono"
          >
            Online
          </span>
        </div>
        <div
          class="mt-6 lg:mt-8 flex items-center gap-2 text-sm text-[var(--orion-text-secondary)]"
        >
          <svg
            aria-hidden="true"
            class="text-[var(--orion-cyan)]"
            fill="none"
            height="16"
            stroke="currentColor"
            viewBox="0 0 24 24"
            width="16"
          >
            <path
              d="M9 5l7 7-7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <span
            class="font-mono"
          >
            Getting Started
          </span>
          <span
            class="text-[var(--orion-text-muted)]"
          >
            •
          </span>
          <span
            class="text-[var(--orion-cyan)] font-mono"
          >
            Step 1 of 4
          </span>
        </div>
      </aside>
      <div
        class="flex-1 lg:pl-8"
        style="flex: 1 1 0%; padding-left: 2rem;"
      >
        <div
          class="relative overflow-hidden rounded-2xl lg:rounded-3xl"
          style="background: linear-gradient(135deg, rgba(30,41,59,0.9) 0%, rgba(15,23,42,0.95) 50%, rgba(30,41,59,0.9) 100%); box-shadow: 0 25px 50px -12px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.1);"
        >
          <div
            class="absolute inset-0 pointer-events-none"
            style="background: linear-gradient(135deg, rgba(255,255,255,0.1) 0%, transparent 40%, transparent 60%, rgba(255,255,255,0.05) 100%);"
          />
          <div
            class="absolute top-0 right-0 w-32 h-32 bg-gradient-to-bl from-[var(--orion-cyan)]/10 to-transparent"
          />
          <div
            class="absolute bottom-0 left-0 w-32 h-32 bg-gradient-to-tr from-[var(--orion-violet)]/10 to-transparent"
          />
          <div
            class="relative z-10 p-8 sm:p-10 lg:p-12"
          >
            <h1
              class="text-3xl sm:text-4xl lg:text-5xl font-bold text-[var(--orion-text-primary)] font-display text-center leading-tight"
            >
              Welcome to 
              <span
                class="text-gradient-cyan"
              >
                ORION
              </span>
            </h1>
            <p
              class="mt-3 text-center text-[var(--orion-text-secondary)] text-lg sm:text-xl font-light"
            >
              Unified P6 & SAP Integration Platform
            </p>
            <div
              class="mt-8 sm:mt-10"
              style="animation-delay: 200ms;"
            >
              <div
                aria-hidden="true"
                class="orbital-container relative w-48 h-48 sm:w-56 sm:h-56 md:w-64 md:h-64 mx-auto mb-8 md:mb-10"
                style="position: relative; width: 16rem; height: 16rem; margin: 0px auto 2.5rem auto;"
              >
                <div
                  class="absolute inset-0 rounded-full border-2 border-[var(--orion-border)] opacity-30"
                  style="position: absolute; inset: 0; border-radius: 9999px; border-width: 2px; border-style: solid; border-color: rgba(148, 163, 184, 0.3); opacity: 0.3;"
                />
                <div
                  class="absolute inset-6 rounded-full border border-[var(--orion-cyan)]/20 animate-pulse-glow"
                  style="position: absolute; inset: 1.5rem; border-radius: 9999px; border-width: 1px; border-style: solid; border-color: rgba(0, 212, 255, 0.2);"
                />
                <div
                  class="absolute inset-12 rounded-full border border-[var(--orion-cyan)]/30"
                  style="position: absolute; inset: 3rem; border-radius: 9999px; border-width: 1px; border-style: solid; border-color: rgba(0, 212, 255, 0.3);"
                />
                <div
                  class="absolute inset-8 rounded-full bg-gradient-to-br from-[var(--orion-cyan)]/5 via-transparent to-[var(--orion-violet)]/5 blur-xl"
                  style="position: absolute; inset: 2rem; border-radius: 9999px;"
                />
                <div
                  class="absolute inset-0 flex items-center justify-center"
                  style="position: absolute; inset: 0; display: flex; align-items: center; justify-content: center;"
                >
                  <div
                    class="relative w-24 h-24 sm:w-28 sm:h-28"
                    style="position: relative; width: 6rem; height: 6rem;"
                  >
                    <div
                      class="absolute -inset-2 rounded-2xl bg-gradient-to-br from-[var(--orion-cyan)]/20 to-[var(--orion-violet)]/20 blur-lg animate-pulse-glow"
                      style="position: absolute; inset: -0.5rem; border-radius: 1rem;"
                    />
                    <div
                      class="relative w-full h-full rounded-2xl bg-gradient-to-br from-[var(--orion-bg-elevated)] via-[var(--orion-bg-secondary)] to-[var(--orion-bg-elevated)] border border-[var(--orion-border)] shadow-2xl flex items-center justify-center overflow-hidden"
                      style="position: relative; width: 100%; height: 100%; border-radius: 1rem; display: flex; align-items: center; justify-content: center; overflow: hidden;"
                    >
                      <div
                        class="absolute inset-0 bg-gradient-to-t from-transparent via-white/[0.02] to-white/[0.05]"
                        style="position: absolute; inset: 0;"
                      />
                      <div
                        class="relative flex flex-col items-center"
                        style="position: relative; display: flex; flex-direction: column; align-items: center;"
                      >
                        <span
                          class="text-3xl sm:text-4xl font-black text-gradient-cyan font-display tracking-tight"
                        >
                          O
                        </span>
                        <span
                          class="text-[10px] font-mono text-[var(--orion-text-muted)] tracking-widest mt-1"
                        >
                          ORION
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="orbital-element absolute"
                  style="position: absolute; top: 0px; left: 50%; transform: translateX(-50%) translateY(-50%); animation: orbit-path 12s linear infinite;"
                >
                  <div
                    class="relative group"
                    style="position: relative;"
                  >
                    <div
                      class="absolute -inset-1 rounded-xl bg-[var(--orion-amber)]/30 blur-md group-hover:blur-lg transition-all"
                      style="position: absolute; inset: -0.25rem; border-radius: 0.75rem;"
                    />
                    <div
                      class="relative w-12 h-12 sm:w-14 sm:h-14 rounded-xl bg-gradient-to-br from-[var(--orion-bg-elevated)] to-[var(--orion-bg-primary)] border-2 border-[var(--orion-amber)]/50 flex items-center justify-center shadow-lg backdrop-blur-sm"
                      style="position: relative; width: 3rem; height: 3rem; border-radius: 0.75rem; display: flex; align-items: center; justify-content: center;"
                    >
                      <span
                        class="text-sm sm:text-base font-bold font-mono text-[var(--orion-amber)]"
                      >
                        P6
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="orbital-element absolute"
                  style="position: absolute; bottom: 0px; left: 50%; transform: translateX(-50%) translateY(50%); animation: orbit-path-reverse 15s linear infinite;"
                >
                  <div
                    class="relative group"
                    style="position: relative;"
                  >
                    <div
                      class="absolute -inset-1 rounded-xl bg-[var(--orion-emerald)]/30 blur-md group-hover:blur-lg transition-all"
                      style="position: absolute; inset: -0.25rem; border-radius: 0.75rem;"
                    />
                    <div
                      class="relative w-12 h-12 sm:w-14 sm:h-14 rounded-xl bg-gradient-to-br from-[var(--orion-bg-elevated)] to-[var(--orion-bg-primary)] border-2 border-[var(--orion-emerald)]/50 flex items-center justify-center shadow-lg backdrop-blur-sm"
                      style="position: relative; width: 3rem; height: 3rem; border-radius: 0.75rem; display: flex; align-items: center; justify-content: center;"
                    >
                      <span
                        class="text-xs sm:text-sm font-bold font-mono text-[var(--orion-emerald)]"
                      >
                        SAP
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="absolute inset-0 pointer-events-none"
                  style="position: absolute; inset: 0; pointer-events: none;"
                >
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 3s linear infinite; animation-delay: 0s; opacity: 0.6;"
                  />
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 3.5s linear infinite; animation-delay: 0.5s; opacity: 0.6;"
                  />
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 4s linear infinite; animation-delay: 1s; opacity: 0.6;"
                  />
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 4.5s linear infinite; animation-delay: 1.5s; opacity: 0.6;"
                  />
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 5s linear infinite; animation-delay: 2s; opacity: 0.6;"
                  />
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 5.5s linear infinite; animation-delay: 2.5s; opacity: 0.6;"
                  />
                </div>
                <div
                  class="absolute inset-0 rounded-full border border-[var(--orion-cyan)]/20 animate-ping"
                  style="position: absolute; inset: 0; border-radius: 9999px; animation-duration: 3s;"
                />
                <div
                  class="absolute inset-0 rounded-full border border-[var(--orion-cyan)]/10 animate-ping"
                  style="position: absolute; inset: 0; border-radius: 9999px; animation-duration: 3s; animation-delay: 1s;"
                />
              </div>
            </div>
            <div
              class="mt-8 sm:mt-10 flex flex-col items-center gap-4"
            >
              <button
                aria-busy="false"
                class="
                    group relative overflow-hidden
                    w-full sm:w-auto
                    px-12 py-4 sm:px-16 sm:py-5
                    font-display font-semibold text-lg
                    text-[var(--orion-bg-primary)]
                    bg-gradient-to-r from-[var(--orion-cyan)] via-[#06b6d4] to-[var(--orion-cyan)]
                    rounded-xl
                    border border-[var(--orion-cyan)]/50
                    transition-all duration-300
                    shadow-[0_0_30px_var(--orion-cyan-glow),inset_0_1px_0_rgba(255,255,255,0.2)]
                    hover:shadow-[0_0_50px_var(--orion-cyan-glow),inset_0_1px_0_rgba(255,255,255,0.3)]
                    hover:-translate-y-1
                    disabled:opacity-60 disabled:cursor-not-allowed disabled:transform-none
                    focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
                  "
                type="button"
              >
                <div
                  class="absolute inset-0 bg-gradient-to-r from-transparent via-white/30 to-transparent -translate-x-full group-hover:translate-x-full transition-transform duration-700"
                />
                <span
                  class="relative flex items-center justify-center gap-2"
                >
                  <span>
                    Get Started
                  </span>
                </span>
              </button>
              <div
                class="flex items-center gap-6 text-sm"
              >
                <button
                  class="text-[var(--orion-text-muted)] hover:text-[var(--orion-text-secondary)] transition-colors font-mono"
                  type="button"
                >
                  Skip Intro
                </button>
                <button
                  class="text-[var(--orion-cyan)] hover:text-[var(--orion-cyan)]/80 transition-colors font-mono underline underline-offset-4"
                  type="button"
                >
                  Watch Tutorial
                </button>
              </div>
            </div>
          </div>
          <div
            class="absolute bottom-0 left-1/2 -translate-x-1/2 w-3/4 h-px bg-gradient-to-r from-transparent via-[var(--orion-cyan)]/50 to-transparent"
          />
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`WelcomeScreen - Snapshot Tests > matches snapshot for user without organization 1`] = `
<div>
  <main
    aria-label="Onboarding Welcome"
    class="min-h-screen flex items-center justify-center p-4 sm:p-6 md:p-8"
    role="main"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 pointer-events-none overflow-hidden"
    >
      <div
        class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[800px] h-[800px] rounded-full border border-[var(--orion-cyan)]/10"
      />
      <div
        class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[1000px] h-[1000px] rounded-full border border-[var(--orion-cyan)]/5 rotate-45"
      />
      <div
        class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[1200px] h-[1200px] rounded-full border border-[var(--orion-violet)]/5 -rotate-12"
      />
      <div
        class="absolute top-1/4 left-1/4 w-64 h-64 bg-[var(--orion-cyan)]/10 rounded-full blur-3xl animate-pulse"
      />
      <div
        class="absolute bottom-1/4 right-1/4 w-96 h-96 bg-[var(--orion-violet)]/10 rounded-full blur-3xl animate-pulse"
        style="animation-delay: 1s;"
      />
      <div
        class="absolute bottom-0 left-0 right-0 h-64 bg-gradient-to-t from-[var(--orion-cyan)]/5 via-transparent to-transparent"
      />
    </div>
    <div
      class="relative w-full max-w-5xl mx-auto flex flex-col lg:flex-row gap-6 lg:gap-0 animate-slide-up"
      style="display: flex; flex-direction: row; gap: 0; max-width: 64rem; margin: 0px auto; width: 100%; position: relative;"
    >
      <aside
        class="lg:w-64 flex-shrink-0 flex flex-col items-center lg:items-start text-center lg:text-left lg:pr-8 lg:border-r lg:border-[var(--orion-border)]/30"
        style="width: 16rem; flex-shrink: 0; display: flex; flex-direction: column; align-items: flex-start; text-align: left; padding-right: 2rem; border-right: 1px solid rgba(148, 163, 184, 0.1);"
      >
        <div
          class="relative group"
        >
          <div
            class="absolute -inset-1 rounded-2xl bg-gradient-to-br from-[var(--orion-cyan)] to-[var(--orion-violet)] opacity-60 blur-sm group-hover:opacity-80 transition-opacity"
          />
          <div
            aria-hidden="true"
            class="relative w-16 h-16 rounded-2xl bg-gradient-to-br from-[var(--orion-cyan)] via-[var(--orion-cyan)]/80 to-[var(--orion-violet)] flex items-center justify-center text-[var(--orion-bg-primary)] text-xl font-bold font-display shadow-lg"
            data-testid="avatar-fallback"
          >
            J
          </div>
        </div>
        <h2
          class="mt-4 text-lg font-semibold text-[var(--orion-text-primary)] font-display"
        >
          Jane
        </h2>
        <div
          class="flex items-center gap-2 mt-1"
        >
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-emerald)] animate-pulse"
          />
          <span
            class="text-xs text-[var(--orion-text-muted)] font-mono"
          >
            Online
          </span>
        </div>
        <div
          class="mt-6 lg:mt-8 flex items-center gap-2 text-sm text-[var(--orion-text-secondary)]"
        >
          <svg
            aria-hidden="true"
            class="text-[var(--orion-cyan)]"
            fill="none"
            height="16"
            stroke="currentColor"
            viewBox="0 0 24 24"
            width="16"
          >
            <path
              d="M9 5l7 7-7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <span
            class="font-mono"
          >
            Getting Started
          </span>
          <span
            class="text-[var(--orion-text-muted)]"
          >
            •
          </span>
          <span
            class="text-[var(--orion-cyan)] font-mono"
          >
            Step 1 of 4
          </span>
        </div>
      </aside>
      <div
        class="flex-1 lg:pl-8"
        style="flex: 1 1 0%; padding-left: 2rem;"
      >
        <div
          class="relative overflow-hidden rounded-2xl lg:rounded-3xl"
          style="background: linear-gradient(135deg, rgba(30,41,59,0.9) 0%, rgba(15,23,42,0.95) 50%, rgba(30,41,59,0.9) 100%); box-shadow: 0 25px 50px -12px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.1);"
        >
          <div
            class="absolute inset-0 pointer-events-none"
            style="background: linear-gradient(135deg, rgba(255,255,255,0.1) 0%, transparent 40%, transparent 60%, rgba(255,255,255,0.05) 100%);"
          />
          <div
            class="absolute top-0 right-0 w-32 h-32 bg-gradient-to-bl from-[var(--orion-cyan)]/10 to-transparent"
          />
          <div
            class="absolute bottom-0 left-0 w-32 h-32 bg-gradient-to-tr from-[var(--orion-violet)]/10 to-transparent"
          />
          <div
            class="relative z-10 p-8 sm:p-10 lg:p-12"
          >
            <h1
              class="text-3xl sm:text-4xl lg:text-5xl font-bold text-[var(--orion-text-primary)] font-display text-center leading-tight"
            >
              Welcome to 
              <span
                class="text-gradient-cyan"
              >
                ORION
              </span>
            </h1>
            <p
              class="mt-3 text-center text-[var(--orion-text-secondary)] text-lg sm:text-xl font-light"
            >
              Unified P6 & SAP Integration Platform
            </p>
            <div
              class="mt-8 sm:mt-10"
              style="animation-delay: 200ms;"
            >
              <div
                aria-hidden="true"
                class="orbital-container relative w-48 h-48 sm:w-56 sm:h-56 md:w-64 md:h-64 mx-auto mb-8 md:mb-10"
                style="position: relative; width: 16rem; height: 16rem; margin: 0px auto 2.5rem auto;"
              >
                <div
                  class="absolute inset-0 rounded-full border-2 border-[var(--orion-border)] opacity-30"
                  style="position: absolute; inset: 0; border-radius: 9999px; border-width: 2px; border-style: solid; border-color: rgba(148, 163, 184, 0.3); opacity: 0.3;"
                />
                <div
                  class="absolute inset-6 rounded-full border border-[var(--orion-cyan)]/20 animate-pulse-glow"
                  style="position: absolute; inset: 1.5rem; border-radius: 9999px; border-width: 1px; border-style: solid; border-color: rgba(0, 212, 255, 0.2);"
                />
                <div
                  class="absolute inset-12 rounded-full border border-[var(--orion-cyan)]/30"
                  style="position: absolute; inset: 3rem; border-radius: 9999px; border-width: 1px; border-style: solid; border-color: rgba(0, 212, 255, 0.3);"
                />
                <div
                  class="absolute inset-8 rounded-full bg-gradient-to-br from-[var(--orion-cyan)]/5 via-transparent to-[var(--orion-violet)]/5 blur-xl"
                  style="position: absolute; inset: 2rem; border-radius: 9999px;"
                />
                <div
                  class="absolute inset-0 flex items-center justify-center"
                  style="position: absolute; inset: 0; display: flex; align-items: center; justify-content: center;"
                >
                  <div
                    class="relative w-24 h-24 sm:w-28 sm:h-28"
                    style="position: relative; width: 6rem; height: 6rem;"
                  >
                    <div
                      class="absolute -inset-2 rounded-2xl bg-gradient-to-br from-[var(--orion-cyan)]/20 to-[var(--orion-violet)]/20 blur-lg animate-pulse-glow"
                      style="position: absolute; inset: -0.5rem; border-radius: 1rem;"
                    />
                    <div
                      class="relative w-full h-full rounded-2xl bg-gradient-to-br from-[var(--orion-bg-elevated)] via-[var(--orion-bg-secondary)] to-[var(--orion-bg-elevated)] border border-[var(--orion-border)] shadow-2xl flex items-center justify-center overflow-hidden"
                      style="position: relative; width: 100%; height: 100%; border-radius: 1rem; display: flex; align-items: center; justify-content: center; overflow: hidden;"
                    >
                      <div
                        class="absolute inset-0 bg-gradient-to-t from-transparent via-white/[0.02] to-white/[0.05]"
                        style="position: absolute; inset: 0;"
                      />
                      <div
                        class="relative flex flex-col items-center"
                        style="position: relative; display: flex; flex-direction: column; align-items: center;"
                      >
                        <span
                          class="text-3xl sm:text-4xl font-black text-gradient-cyan font-display tracking-tight"
                        >
                          O
                        </span>
                        <span
                          class="text-[10px] font-mono text-[var(--orion-text-muted)] tracking-widest mt-1"
                        >
                          ORION
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="orbital-element absolute"
                  style="position: absolute; top: 0px; left: 50%; transform: translateX(-50%) translateY(-50%); animation: orbit-path 12s linear infinite;"
                >
                  <div
                    class="relative group"
                    style="position: relative;"
                  >
                    <div
                      class="absolute -inset-1 rounded-xl bg-[var(--orion-amber)]/30 blur-md group-hover:blur-lg transition-all"
                      style="position: absolute; inset: -0.25rem; border-radius: 0.75rem;"
                    />
                    <div
                      class="relative w-12 h-12 sm:w-14 sm:h-14 rounded-xl bg-gradient-to-br from-[var(--orion-bg-elevated)] to-[var(--orion-bg-primary)] border-2 border-[var(--orion-amber)]/50 flex items-center justify-center shadow-lg backdrop-blur-sm"
                      style="position: relative; width: 3rem; height: 3rem; border-radius: 0.75rem; display: flex; align-items: center; justify-content: center;"
                    >
                      <span
                        class="text-sm sm:text-base font-bold font-mono text-[var(--orion-amber)]"
                      >
                        P6
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="orbital-element absolute"
                  style="position: absolute; bottom: 0px; left: 50%; transform: translateX(-50%) translateY(50%); animation: orbit-path-reverse 15s linear infinite;"
                >
                  <div
                    class="relative group"
                    style="position: relative;"
                  >
                    <div
                      class="absolute -inset-1 rounded-xl bg-[var(--orion-emerald)]/30 blur-md group-hover:blur-lg transition-all"
                      style="position: absolute; inset: -0.25rem; border-radius: 0.75rem;"
                    />
                    <div
                      class="relative w-12 h-12 sm:w-14 sm:h-14 rounded-xl bg-gradient-to-br from-[var(--orion-bg-elevated)] to-[var(--orion-bg-primary)] border-2 border-[var(--orion-emerald)]/50 flex items-center justify-center shadow-lg backdrop-blur-sm"
                      style="position: relative; width: 3rem; height: 3rem; border-radius: 0.75rem; display: flex; align-items: center; justify-content: center;"
                    >
                      <span
                        class="text-xs sm:text-sm font-bold font-mono text-[var(--orion-emerald)]"
                      >
                        SAP
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="absolute inset-0 pointer-events-none"
                  style="position: absolute; inset: 0; pointer-events: none;"
                >
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 3s linear infinite; animation-delay: 0s; opacity: 0.6;"
                  />
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 3.5s linear infinite; animation-delay: 0.5s; opacity: 0.6;"
                  />
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 4s linear infinite; animation-delay: 1s; opacity: 0.6;"
                  />
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 4.5s linear infinite; animation-delay: 1.5s; opacity: 0.6;"
                  />
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 5s linear infinite; animation-delay: 2s; opacity: 0.6;"
                  />
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 5.5s linear infinite; animation-delay: 2.5s; opacity: 0.6;"
                  />
                </div>
                <div
                  class="absolute inset-0 rounded-full border border-[var(--orion-cyan)]/20 animate-ping"
                  style="position: absolute; inset: 0; border-radius: 9999px; animation-duration: 3s;"
                />
                <div
                  class="absolute inset-0 rounded-full border border-[var(--orion-cyan)]/10 animate-ping"
                  style="position: absolute; inset: 0; border-radius: 9999px; animation-duration: 3s; animation-delay: 1s;"
                />
              </div>
            </div>
            <div
              class="mt-8 sm:mt-10 flex flex-col items-center gap-4"
            >
              <button
                aria-busy="false"
                class="
                    group relative overflow-hidden
                    w-full sm:w-auto
                    px-12 py-4 sm:px-16 sm:py-5
                    font-display font-semibold text-lg
                    text-[var(--orion-bg-primary)]
                    bg-gradient-to-r from-[var(--orion-cyan)] via-[#06b6d4] to-[var(--orion-cyan)]
                    rounded-xl
                    border border-[var(--orion-cyan)]/50
                    transition-all duration-300
                    shadow-[0_0_30px_var(--orion-cyan-glow),inset_0_1px_0_rgba(255,255,255,0.2)]
                    hover:shadow-[0_0_50px_var(--orion-cyan-glow),inset_0_1px_0_rgba(255,255,255,0.3)]
                    hover:-translate-y-1
                    disabled:opacity-60 disabled:cursor-not-allowed disabled:transform-none
                    focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
                  "
                type="button"
              >
                <div
                  class="absolute inset-0 bg-gradient-to-r from-transparent via-white/30 to-transparent -translate-x-full group-hover:translate-x-full transition-transform duration-700"
                />
                <span
                  class="relative flex items-center justify-center gap-2"
                >
                  <span>
                    Get Started
                  </span>
                </span>
              </button>
              <div
                class="flex items-center gap-6 text-sm"
              >
                <button
                  class="text-[var(--orion-text-muted)] hover:text-[var(--orion-text-secondary)] transition-colors font-mono"
                  type="button"
                >
                  Skip Intro
                </button>
                <button
                  class="text-[var(--orion-cyan)] hover:text-[var(--orion-cyan)]/80 transition-colors font-mono underline underline-offset-4"
                  type="button"
                >
                  Watch Tutorial
                </button>
              </div>
            </div>
          </div>
          <div
            class="absolute bottom-0 left-1/2 -translate-x-1/2 w-3/4 h-px bg-gradient-to-r from-transparent via-[var(--orion-cyan)]/50 to-transparent"
          />
        </div>
      </div>
    </div>
  </main>
</div>
`;

exports[`WelcomeScreen - Snapshot Tests > matches snapshot in loading state 1`] = `
<div>
  <main
    aria-label="Onboarding Welcome"
    class="min-h-screen flex items-center justify-center p-4 sm:p-6 md:p-8"
    role="main"
  >
    <div
      aria-hidden="true"
      class="fixed inset-0 pointer-events-none overflow-hidden"
    >
      <div
        class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[800px] h-[800px] rounded-full border border-[var(--orion-cyan)]/10"
      />
      <div
        class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[1000px] h-[1000px] rounded-full border border-[var(--orion-cyan)]/5 rotate-45"
      />
      <div
        class="absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-[1200px] h-[1200px] rounded-full border border-[var(--orion-violet)]/5 -rotate-12"
      />
      <div
        class="absolute top-1/4 left-1/4 w-64 h-64 bg-[var(--orion-cyan)]/10 rounded-full blur-3xl animate-pulse"
      />
      <div
        class="absolute bottom-1/4 right-1/4 w-96 h-96 bg-[var(--orion-violet)]/10 rounded-full blur-3xl animate-pulse"
        style="animation-delay: 1s;"
      />
      <div
        class="absolute bottom-0 left-0 right-0 h-64 bg-gradient-to-t from-[var(--orion-cyan)]/5 via-transparent to-transparent"
      />
    </div>
    <div
      class="relative w-full max-w-5xl mx-auto flex flex-col lg:flex-row gap-6 lg:gap-0 animate-slide-up"
      style="display: flex; flex-direction: row; gap: 0; max-width: 64rem; margin: 0px auto; width: 100%; position: relative;"
    >
      <aside
        class="lg:w-64 flex-shrink-0 flex flex-col items-center lg:items-start text-center lg:text-left lg:pr-8 lg:border-r lg:border-[var(--orion-border)]/30"
        style="width: 16rem; flex-shrink: 0; display: flex; flex-direction: column; align-items: flex-start; text-align: left; padding-right: 2rem; border-right: 1px solid rgba(148, 163, 184, 0.1);"
      >
        <div
          class="relative group"
        >
          <div
            class="absolute -inset-1 rounded-2xl bg-gradient-to-br from-[var(--orion-cyan)] to-[var(--orion-violet)] opacity-50 blur-sm group-hover:opacity-70 transition-opacity"
          />
          <img
            alt="User avatar"
            class="relative w-16 h-16 rounded-2xl object-cover border-2 border-[var(--orion-cyan)]/30"
            src="https://example.com/avatar.jpg"
          />
        </div>
        <h2
          class="mt-4 text-lg font-semibold text-[var(--orion-text-primary)] font-display"
        >
          John
        </h2>
        <div
          class="flex items-center gap-2 mt-1"
        >
          <span
            class="w-2 h-2 rounded-full bg-[var(--orion-emerald)] animate-pulse"
          />
          <span
            class="text-xs text-[var(--orion-text-muted)] font-mono"
          >
            Online
          </span>
        </div>
        <div
          class="mt-6 lg:mt-8 flex items-center gap-2 text-sm text-[var(--orion-text-secondary)]"
        >
          <svg
            aria-hidden="true"
            class="text-[var(--orion-cyan)]"
            fill="none"
            height="16"
            stroke="currentColor"
            viewBox="0 0 24 24"
            width="16"
          >
            <path
              d="M9 5l7 7-7 7"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </svg>
          <span
            class="font-mono"
          >
            Getting Started
          </span>
          <span
            class="text-[var(--orion-text-muted)]"
          >
            •
          </span>
          <span
            class="text-[var(--orion-cyan)] font-mono"
          >
            Step 1 of 4
          </span>
        </div>
      </aside>
      <div
        class="flex-1 lg:pl-8"
        style="flex: 1 1 0%; padding-left: 2rem;"
      >
        <div
          class="relative overflow-hidden rounded-2xl lg:rounded-3xl"
          style="background: linear-gradient(135deg, rgba(30,41,59,0.9) 0%, rgba(15,23,42,0.95) 50%, rgba(30,41,59,0.9) 100%); box-shadow: 0 25px 50px -12px rgba(0,0,0,0.5), inset 0 1px 0 rgba(255,255,255,0.1);"
        >
          <div
            class="absolute inset-0 pointer-events-none"
            style="background: linear-gradient(135deg, rgba(255,255,255,0.1) 0%, transparent 40%, transparent 60%, rgba(255,255,255,0.05) 100%);"
          />
          <div
            class="absolute top-0 right-0 w-32 h-32 bg-gradient-to-bl from-[var(--orion-cyan)]/10 to-transparent"
          />
          <div
            class="absolute bottom-0 left-0 w-32 h-32 bg-gradient-to-tr from-[var(--orion-violet)]/10 to-transparent"
          />
          <div
            class="relative z-10 p-8 sm:p-10 lg:p-12"
          >
            <h1
              class="text-3xl sm:text-4xl lg:text-5xl font-bold text-[var(--orion-text-primary)] font-display text-center leading-tight"
            >
              Welcome to 
              <span
                class="text-gradient-cyan"
              >
                ORION
              </span>
            </h1>
            <p
              class="mt-3 text-center text-[var(--orion-text-secondary)] text-lg sm:text-xl font-light"
            >
              Unified P6 & SAP Integration Platform
            </p>
            <div
              class="mt-8 sm:mt-10"
              style="animation-delay: 200ms;"
            >
              <div
                aria-hidden="true"
                class="orbital-container relative w-48 h-48 sm:w-56 sm:h-56 md:w-64 md:h-64 mx-auto mb-8 md:mb-10"
                style="position: relative; width: 16rem; height: 16rem; margin: 0px auto 2.5rem auto;"
              >
                <div
                  class="absolute inset-0 rounded-full border-2 border-[var(--orion-border)] opacity-30"
                  style="position: absolute; inset: 0; border-radius: 9999px; border-width: 2px; border-style: solid; border-color: rgba(148, 163, 184, 0.3); opacity: 0.3;"
                />
                <div
                  class="absolute inset-6 rounded-full border border-[var(--orion-cyan)]/20 animate-pulse-glow"
                  style="position: absolute; inset: 1.5rem; border-radius: 9999px; border-width: 1px; border-style: solid; border-color: rgba(0, 212, 255, 0.2);"
                />
                <div
                  class="absolute inset-12 rounded-full border border-[var(--orion-cyan)]/30"
                  style="position: absolute; inset: 3rem; border-radius: 9999px; border-width: 1px; border-style: solid; border-color: rgba(0, 212, 255, 0.3);"
                />
                <div
                  class="absolute inset-8 rounded-full bg-gradient-to-br from-[var(--orion-cyan)]/5 via-transparent to-[var(--orion-violet)]/5 blur-xl"
                  style="position: absolute; inset: 2rem; border-radius: 9999px;"
                />
                <div
                  class="absolute inset-0 flex items-center justify-center"
                  style="position: absolute; inset: 0; display: flex; align-items: center; justify-content: center;"
                >
                  <div
                    class="relative w-24 h-24 sm:w-28 sm:h-28"
                    style="position: relative; width: 6rem; height: 6rem;"
                  >
                    <div
                      class="absolute -inset-2 rounded-2xl bg-gradient-to-br from-[var(--orion-cyan)]/20 to-[var(--orion-violet)]/20 blur-lg animate-pulse-glow"
                      style="position: absolute; inset: -0.5rem; border-radius: 1rem;"
                    />
                    <div
                      class="relative w-full h-full rounded-2xl bg-gradient-to-br from-[var(--orion-bg-elevated)] via-[var(--orion-bg-secondary)] to-[var(--orion-bg-elevated)] border border-[var(--orion-border)] shadow-2xl flex items-center justify-center overflow-hidden"
                      style="position: relative; width: 100%; height: 100%; border-radius: 1rem; display: flex; align-items: center; justify-content: center; overflow: hidden;"
                    >
                      <div
                        class="absolute inset-0 bg-gradient-to-t from-transparent via-white/[0.02] to-white/[0.05]"
                        style="position: absolute; inset: 0;"
                      />
                      <div
                        class="relative flex flex-col items-center"
                        style="position: relative; display: flex; flex-direction: column; align-items: center;"
                      >
                        <span
                          class="text-3xl sm:text-4xl font-black text-gradient-cyan font-display tracking-tight"
                        >
                          O
                        </span>
                        <span
                          class="text-[10px] font-mono text-[var(--orion-text-muted)] tracking-widest mt-1"
                        >
                          ORION
                        </span>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="orbital-element absolute"
                  style="position: absolute; top: 0px; left: 50%; transform: translateX(-50%) translateY(-50%); animation: orbit-path 12s linear infinite;"
                >
                  <div
                    class="relative group"
                    style="position: relative;"
                  >
                    <div
                      class="absolute -inset-1 rounded-xl bg-[var(--orion-amber)]/30 blur-md group-hover:blur-lg transition-all"
                      style="position: absolute; inset: -0.25rem; border-radius: 0.75rem;"
                    />
                    <div
                      class="relative w-12 h-12 sm:w-14 sm:h-14 rounded-xl bg-gradient-to-br from-[var(--orion-bg-elevated)] to-[var(--orion-bg-primary)] border-2 border-[var(--orion-amber)]/50 flex items-center justify-center shadow-lg backdrop-blur-sm"
                      style="position: relative; width: 3rem; height: 3rem; border-radius: 0.75rem; display: flex; align-items: center; justify-content: center;"
                    >
                      <span
                        class="text-sm sm:text-base font-bold font-mono text-[var(--orion-amber)]"
                      >
                        P6
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="orbital-element absolute"
                  style="position: absolute; bottom: 0px; left: 50%; transform: translateX(-50%) translateY(50%); animation: orbit-path-reverse 15s linear infinite;"
                >
                  <div
                    class="relative group"
                    style="position: relative;"
                  >
                    <div
                      class="absolute -inset-1 rounded-xl bg-[var(--orion-emerald)]/30 blur-md group-hover:blur-lg transition-all"
                      style="position: absolute; inset: -0.25rem; border-radius: 0.75rem;"
                    />
                    <div
                      class="relative w-12 h-12 sm:w-14 sm:h-14 rounded-xl bg-gradient-to-br from-[var(--orion-bg-elevated)] to-[var(--orion-bg-primary)] border-2 border-[var(--orion-emerald)]/50 flex items-center justify-center shadow-lg backdrop-blur-sm"
                      style="position: relative; width: 3rem; height: 3rem; border-radius: 0.75rem; display: flex; align-items: center; justify-content: center;"
                    >
                      <span
                        class="text-xs sm:text-sm font-bold font-mono text-[var(--orion-emerald)]"
                      >
                        SAP
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  class="absolute inset-0 pointer-events-none"
                  style="position: absolute; inset: 0; pointer-events: none;"
                >
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 3s linear infinite; animation-delay: 0s; opacity: 0.6;"
                  />
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 3.5s linear infinite; animation-delay: 0.5s; opacity: 0.6;"
                  />
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 4s linear infinite; animation-delay: 1s; opacity: 0.6;"
                  />
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 4.5s linear infinite; animation-delay: 1.5s; opacity: 0.6;"
                  />
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 5s linear infinite; animation-delay: 2s; opacity: 0.6;"
                  />
                  <div
                    class="absolute w-1 h-1 rounded-full bg-[var(--orion-cyan)]"
                    style="position: absolute; width: 0.25rem; height: 0.25rem; border-radius: 9999px; top: 50%; left: 50%; animation: data-particle 5.5s linear infinite; animation-delay: 2.5s; opacity: 0.6;"
                  />
                </div>
                <div
                  class="absolute inset-0 rounded-full border border-[var(--orion-cyan)]/20 animate-ping"
                  style="position: absolute; inset: 0; border-radius: 9999px; animation-duration: 3s;"
                />
                <div
                  class="absolute inset-0 rounded-full border border-[var(--orion-cyan)]/10 animate-ping"
                  style="position: absolute; inset: 0; border-radius: 9999px; animation-duration: 3s; animation-delay: 1s;"
                />
              </div>
            </div>
            <div
              class="mt-8 sm:mt-10 flex flex-col items-center gap-4"
            >
              <button
                aria-busy="true"
                class="
                    group relative overflow-hidden
                    w-full sm:w-auto
                    px-12 py-4 sm:px-16 sm:py-5
                    font-display font-semibold text-lg
                    text-[var(--orion-bg-primary)]
                    bg-gradient-to-r from-[var(--orion-cyan)] via-[#06b6d4] to-[var(--orion-cyan)]
                    rounded-xl
                    border border-[var(--orion-cyan)]/50
                    transition-all duration-300
                    shadow-[0_0_30px_var(--orion-cyan-glow),inset_0_1px_0_rgba(255,255,255,0.2)]
                    hover:shadow-[0_0_50px_var(--orion-cyan-glow),inset_0_1px_0_rgba(255,255,255,0.3)]
                    hover:-translate-y-1
                    disabled:opacity-60 disabled:cursor-not-allowed disabled:transform-none
                    focus:outline-none focus-visible:ring-2 focus-visible:ring-[var(--orion-cyan)] focus-visible:ring-offset-2 focus-visible:ring-offset-[var(--orion-bg-primary)]
                  "
                disabled=""
                type="button"
              >
                <div
                  class="absolute inset-0 bg-gradient-to-r from-transparent via-white/30 to-transparent -translate-x-full group-hover:translate-x-full transition-transform duration-700"
                />
                <span
                  class="relative flex items-center justify-center gap-2"
                >
                  <div
                    aria-hidden="true"
                    class="w-5 h-5 border-2 border-[var(--orion-bg-primary)]/30 border-t-[var(--orion-bg-primary)] rounded-full animate-spin"
                    data-testid="loading-spinner"
                  />
                </span>
              </button>
              <div
                class="flex items-center gap-6 text-sm"
              >
                <button
                  class="text-[var(--orion-text-muted)] hover:text-[var(--orion-text-secondary)] transition-colors font-mono"
                  type="button"
                >
                  Skip Intro
                </button>
                <button
                  class="text-[var(--orion-cyan)] hover:text-[var(--orion-cyan)]/80 transition-colors font-mono underline underline-offset-4"
                  type="button"
                >
                  Watch Tutorial
                </button>
              </div>
            </div>
          </div>
          <div
            class="absolute bottom-0 left-1/2 -translate-x-1/2 w-3/4 h-px bg-gradient-to-r from-transparent via-[var(--orion-cyan)]/50 to-transparent"
          />
        </div>
      </div>
    </div>
  </main>
</div>
`;
